tests/negative/exceptions/inherit_builtin/input.ci
structure MyError : RuntimeException {
    int code = 0;
}

void main() {}
